# dea

./: .emacs  .gitignore  ChangeLog  Makefile.am  Makefile.in  README  README.org  clean.sh  configure.ac  install  install.emacs.sh  update.sh
ahei.info/: about.htm  license.htm  misc.txt
emacser.com/: emacs-resource.htm  emacs_graphviz_ds.org  evernote-mode.org  license.htm  twittering-mode.mkd
lisps/: .gitignore  graphviz-dot-mode.el  vimrc-mode.el
lisps/Emacs-PDE-0.2.16/lisp/: pde-load.el
lisps/Emacs-PDE-0.2.16/lisp/tools/: .gitignore
lisps/org/: ob-C.elc  ob-R.elc  ob-asymptote.elc  ob-clojure.elc  ob-comint.elc  ob-css.elc  ob-ditaa.elc  ob-dot.elc  ob-emacs-lisp.elc  ob-eval.elc  ob-exp.elc  ob-gnuplot.elc  ob-haskell.elc  ob-js.elc  ob-keys.elc  ob-latex.elc  ob-ledger.elc  ob-lob.elc  ob-matlab.elc  ob-mscgen.elc  ob-ocaml.elc  ob-octave.elc  ob-org.elc  ob-perl.elc  ob-plantuml.elc  ob-python.elc  ob-ref.elc  ob-ruby.elc  ob-sass.elc  ob-scheme.elc  ob-screen.elc  ob-sh.elc  ob-sql.elc  ob-sqlite.elc  ob-table.elc  ob-tangle.elc  ob.elc  org-agenda.elc  org-archive.elc  org-ascii.elc  (+55 more)
my-lisps/: auto-complete-settings.el  autopair-settings.el  dev-settings.el  dired-lis.el  eval-after-load.el  ezbl-settings.el  flymake-settings.el  funny.el  misc-settings.el  multi-term-settings.el  multi-term.el  org-settings.el  pycomplete-settings.el  python-settings.el  ropemacs-settings.el
screenshots/highlight-tail/: highlight-tail.swf
templates/: main.cpp.log.tpl  main.cpp.tpl  main.sh.log.tpl  main.sh.tpl
