#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.64])
AC_INIT(DEA, 1.4, ahei0802@gmail.com)
AM_INIT_AUTOMAKE(DEA, 1.4)

# Checks for programs.
dnl AC_PROG_INSTALL
dnl AC_PROG_LN_S
dnl AC_PROG_MAKE_SET

AC_CONFIG_FILES([Makefile
                 lisps/Makefile
                 my-lisps/Makefile])
AC_OUTPUT
